--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="textView">TextView</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="total">Total</string>
+    <string name="basket">Basket</string>
     <string name="itemAdded">Votre plat a été ajouté au panier</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
