--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="total">Total</string>
     <string name="basket">Basket</string>
+    <string name="quantity">Quantity</string>
     <string name="itemAdded">Votre plat a été ajouté au panier</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
