--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,17 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="total">Total</string>
     <string name="basket">Basket</string>
-    <string name="quantity">Quantity</string>
+    <string name="quantity">Quantity  </string>
     <string name="itemAdded">Votre plat a été ajouté au panier</string>
+    <string name="order">Passer la commande</string>
+    <string name="registerTitle"> Création de votre compte </string>
+    <string name="loginTitle">Se connecter</string>
+    <string name="email">Email</string>
+    <string name="password">Mot de passe</string>
+    <string name="connect"> Se connecter </string>
+    <string name="register"> Créer votre compte </string>
+    <string name="noAccount">Je n\'ai pas de compte</string>
+    <string name="firstName">Prénom</string>
+    <string name="lastName">Nom</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
