--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="Desserts">Desserts</string>
     <string name="ImageChefAndroid">ContentDescription</string>
     <string name="textView">TextView</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="total">Total</string>
     <string name="basket">Basket</string>
     <string name="quantity">Quantity  </string>
@@ -21,5 +20,5 @@
     <string name="noAccount">Je n\'ai pas de compte</string>
     <string name="firstName">Prénom</string>
     <string name="lastName">Nom</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="invalidForms">Veuillez saisir tous les champs</string>
 </resources>
